<?xml version="1.0" encoding="utf-8"?>

<!--
    Author: Tristan Mitchell
    Created: 08/04/16
    Purpose: xml layout for the EditRecipe Activity
-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/editRecipe_ScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.tmitchell.mypersonalcookbook.EditRecipe"
    tools:showIn="@layout/activity_edit_recipe">

    <LinearLayout
        android:id="@+id/editRecipe_LinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--RECIPE TITLE-->
        <TextView
            android:id="@+id/editRecipe_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="20dp"
            android:text="@string/recipeTitle_label"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editRecipe_title_in"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <!--RECIPE CATEGORY-->
        <TextView
            android:id="@+id/editRecipe_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="20dp"
            android:text="@string/recipeCategory_label"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/editRecipe_category_in"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <!--RECIPE SERVES-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="20dp"
            android:text="@string/recipeServes_label"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editRecipe_serves_in"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:inputType="number"
            android:text="@string/default_serves_no" />

        <!--RECIPE INGREDIENTS-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="20dp"
            android:text="@string/recipeIngredients_label"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/ingredients_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:text="@string/recipeIngredients"
            android:textColor="@color/colorDefault"
            android:textSize="15sp" />

        <LinearLayout
            android:id="@+id/add_remove_buttons_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingTop="25dp">

            <ImageButton
                android:id="@+id/add_ingredient_button_edit"
                android:src="@drawable/plus_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:layout_weight="1"
                android:contentDescription="@string/add_ingredient_desc" />

            <ImageButton
                android:id="@+id/remove_ingredient_button_edit"
                android:src="@drawable/minus_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:layout_weight="1"
                android:contentDescription="@string/remove_ingredient_desc" />
        </LinearLayout>


        <!--RECIPE DIRECTIONS-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="20dp"
            android:text="@string/recipeDirections_label"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editRecipe_Directions_in"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:inputType="textMultiLine"
            android:lines="1"
            android:maxLines="15" />

        <!--RECIPE COMMENTS-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="20dp"
            android:text="@string/comments_label"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editRecipe_Comments_in"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:inputType="textMultiLine"
            android:lines="1"
            android:maxLines="15" />

        <TextView
            android:id="@+id/editRecipe_preptime_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="20dp"
            android:text="@string/recipePreptime_label"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="25dp">
            <!--RECIPE PREP-TIME-->
            <EditText
                android:id="@+id/editRecipe_preptime_in"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginStart="25dp"
                android:gravity="bottom"
                android:inputType="number" />

            <TextView
                android:id="@+id/editRecipe_mins_pt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:text="@string/minutes"
                android:textSize="15sp" />
        </LinearLayout>

        <!--RECIPE COOK-TIME-->
        <TextView
            android:id="@+id/editRecipe_cooktime_label"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:paddingTop="20dp"
            android:text="@string/recipeCooktime_label"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="25dp">

            <EditText
                android:id="@+id/editRecipe_cooktime_in"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginStart="25dp"
                android:gravity="bottom"

                android:inputType="number" />

            <TextView
                android:id="@+id/addRecipe_mins_ct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:text="@string/minutes"

                android:textSize="15sp" />

        </LinearLayout>

        <Button
            android:id="@+id/editRecipe_submit_button"
            android:layout_width="250dp"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1.61"
            android:background="@color/colorPrimary"
            android:onClick="editRecipe"
            android:text="@string/btn_saveRecipe"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </LinearLayout>
</ScrollView>