<?xml version="1.0" encoding="utf-8"?>
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.tmitchell.mypersonalcookbook.ViewRecipe"
    tools:showIn="@layout/activity_view_recipe"
    android:id="@+id/viewRecipe_scrollView">
    <LinearLayout
        android:id="@+id/viewRecipe_LinearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
        android:id="@+id/title_label_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recipeTitle_label"
        android:textSize="20sp"
        android:layout_gravity="start"/>

        <TextView
            android:id="@+id/title_view"
            android:textColor="@color/colorDefault"
            android:text="@string/recipeTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/category_label_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recipeCategory_label"
            android:textSize="20sp"
            android:layout_gravity="start"/>

        <TextView
            android:id="@+id/category_view"
            android:textColor="@color/colorDefault"
            android:text="@string/recipeCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"/>

    </LinearLayout>



    </ScrollView>


